--- a/FRONT/css/3-container.css
+++ b/FRONT/css/3-container.css
@@ -94,13 +94,13 @@
 
   .container h2 {
     font-size: 25px;
-    padding-top: 10px;
+    padding-top: 8px;
     padding-bottom: 20px;
   }
 
   .container p {
-    font-size: 16px;
-    padding-top: 20px;
+    font-size: 14px;
+    padding-top: 6px;
   }
 
   .card h2{
@@ -108,7 +108,7 @@
   }
 
   .card1 p {
-    padding-top: 30px;
+    padding-top: 0;
   }
 
   .card1 h2 {
