--- a/FRONT/css/6-footer.css
+++ b/FRONT/css/6-footer.css
@@ -40,12 +40,26 @@ footer {
 footer{
     width: 94%;
     margin-left: 3%;
-    margin-bottom: 15px;
-}    
+    margin-bottom: 12px;
+    margin-top: -40px;
+    height: 130px;
+}   
+
+.reseaux{
+    margin-top: 50px;
+}
+
+.reseaux a{
+    padding-bottom: 0;
+}
+
+footer a{
+    font-size: 12px;
+}
 
 .contact a{
     text-align: center;
-    font-size: 25px;
+    font-size: 23px;
 }
 
 }
