--- a/FRONT/css/1-global.css
+++ b/FRONT/css/1-global.css
@@ -12,7 +12,7 @@
 }
 
 body {
-	background-image: url(/FRONT/images/planete.png);
+	background-image: url(/FRONT/images/planete.webp);
 	background-size: cover;
 	background-position: center left;    
 }
