--- a/FRONT/css/2-banner.css
+++ b/FRONT/css/2-banner.css
@@ -48,9 +48,62 @@
 
 @media (max-width: 980px) {
   #banner a {
-    display: flex;
-    margin-top: 120px;
+    display: block;
+    margin-top: 135px;
   }
 
- 
+  .sidepanel {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 50vh;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidepanel a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidepanel a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+
+ /* .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: transparent;   
+    color: white;
+    padding: 20px 25px;
+    border: none;
+    display: none;
+  }
+  
+  .openbtn:hover {    
+    background: white;
+  } */
+  
+}
+
+@media (max-width: 480px) {
+  .openbtn {
+    position: relative;
+    top: -155px;
+  }
 }
