--- a/FRONT/css/2-banner.css
+++ b/FRONT/css/2-banner.css
@@ -1,7 +1,10 @@
 #banner {
   background-color: purple;
+  position: fixed;
   border: 2px solid red;
   height: 150px;
+  width: 100%;
+  margin-bottom: 50px;
 }
 
 .logo img {
@@ -46,17 +49,18 @@
 
 /* media queries */
 
-@media (max-width: 980px) {
-  #banner a {
-    display: block;
-    margin-top: 135px;
+@media (max-width: 980px) {  
+  #banner{
+    z-index: 1;
   }
-
+  #banner a {
+    visibility: hidden;
+  }
   .sidepanel {
     width: 0;
     position: fixed;
     z-index: 1;
-    height: 50vh;
+    height: 45vh;
     top: 0;
     left: 0;
     background-color: #111;
@@ -64,7 +68,6 @@
     transition: 0.5s;
     padding-top: 60px;
   }
-
   .sidepanel a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -73,37 +76,42 @@
     display: block;
     transition: 0.3s;
   }
-
   .sidepanel a:hover {
     color: #f1f1f1;
   }
-
   .sidepanel .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
   }
-
- /* .openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: transparent;   
-    color: white;
-    padding: 20px 25px;
-    border: none;
-    display: none;
-  }
-  
-  .openbtn:hover {    
-    background: white;
-  } */
-  
 }
 
 @media (max-width: 480px) {
-  .openbtn {
-    position: relative;
-    top: -155px;
+  #banner{
+    z-index: 0;
+  }
+  .sidepanel {
+    height: 300px;
+    width: 30%;
+  }
+  .sidepanel a {
+    padding: 0 5px 10px 15px;
+    padding-bottom: -10px;
+    font-size: 20px;
+  }
+  .sidepanel .closebtn {
+    top: 5px;
+    left: 25px;
+    font-size: 30px;
+  }
+  .fa-shop {
+    justify-content: normal;
+    margin-top: -95px;
+    font-size: 25px;
+  }
+  .logo img {
+    height: 70px;
+    margin: 35px 160px;
   }
 }
