--- a/FRONT/css/3-container.css
+++ b/FRONT/css/3-container.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 50px;
+  margin-top: 180px;
   height: 500px;
 }
 
@@ -87,65 +87,70 @@
 /* media queries */
 
 @media (max-width: 980px) {
-
-  .container{
-    margin-top: -20px;
+  #feature{
+    background-image: url(/FRONT/images/satellite.webp);
+    background-size: cover;
+    background-position: center 50%;   
+    border: 8px solid purple;
+    border-radius: 100px 0;
+    height: 300px;
+    width: 70%;
+    margin: 0 auto -40px;
+    position: relative;
+    top: 200px;
+    z-index: -2;  
   }
-
+  .container{
+    margin-top: 280px;
+  }
   .container h2 {
     font-size: 25px;
     padding-top: 8px;
     padding-bottom: 20px;
   }
-
   .container p {
     font-size: 14px;
     padding-top: 6px;
   }
-
   .card h2{
     padding-top: 20px;
   }
-
   .card1 p {
     padding-top: 0;
   }
-
   .card1 h2 {
-    padding-top: 35px;    
+    padding-top: 35px;
   }  
 }
 
     /* media queries */
 
 @media (max-width: 480px) {
-
 .container {
   height: 1060px;  
 }
-
+#feature{
+  background-image: url(/FRONT/images/satellite_mini.webp);
+  background-repeat: no-repeat;
+  width: 70%; 
+}
 .card {
   width: 90%;
   line-height: 1.3;  
 }
-
 .card h2{
   font-size: 23px;
 }
-
 .card p{
   font-size: 17px; 
 }
-
 .card1 p{
   padding-top: 12px;
 }
-
 .card1 h2{
   text-align: center;
   padding-top: 40px;
 }
-
 hr{
   visibility: visible;
   background-color: red;
@@ -155,7 +160,6 @@ hr{
   border: none;
   border-radius: 10px;
 }
-
 }
 
 /* ::after{
