--- a/FRONT/style.css
+++ b/FRONT/style.css
@@ -11,39 +11,33 @@
 /* .carousel{display:none;} */
 /* footer{display:none;} */
 
-.fa-bars {
-  visibility: hidden;
-}
-
+#mySidepanel,
+.fa-bars,
 .fireball {
   visibility: hidden;
 }
 
 /* media queries 980px */
 
-@media (max-width: 980px) {
-  #banner {
-    visibility: hidden;
+@media (max-width: 980px) { 
+  #mySidepanel {
+    visibility: visible;
   }
-
   .logo > img {
     visibility: visible;
     position: absolute;
     left: 45%;
     transform: translateX(-30%);
   }
-
   .fireball {
     position: absolute;
     right: 0;
     visibility: visible;
   }
-
   .openbtn,
   .fa-bars {
     visibility: visible;
   }
-
   .openbtn {
     display: flex;
     align-items: center;
@@ -56,12 +50,10 @@
     top: 50px;
     margin-left: 20px;
   }
-
-  .fa-bars {      
+  .fa-bars {
     color: purple;
     font-size: 22px;
   }
-
   .fa-shop {
     margin-top: 30px;
     margin-right: 45%;
@@ -76,28 +68,22 @@
     font-size: 20px;
     margin-left: 20px;
   }
-
   .logo > img {
     transform: translateX(-50%);
   }
-
   .fireball {
     visibility: hidden;
   }
-
   .container .rect {
     width: 100%;
     margin: 20px 0;
   }
-
   .slider {
     height: 300px;
   }
-
   .slider .carousel-indicators {
     bottom: 5px;
   }
-
   .slider .carousel-inner .carousel-item {
     height: 300px;
   }
